--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,5 +11,12 @@ doi = {https://doi.org/10.1016/j.jclepro.2019.119006},
 url = {https://www.sciencedirect.com/science/article/pii/S0959652619338764},
 author = {Fei Wu and Yong Geng and Yuquan Zhang and Chenxing Ji and Yifan Chen and Lu Sun and Wei Xie and Tariq Ali and Tsuyoshi Fujita},
 keywords = {Soybean, Sustainability, Trade war, Emergy analysis, China, Governance}
-}
+},
 
+@inproceedings{ji2023state4,
+  title={State4: State-preserving Reconfiguration of P4-programmable Switches},
+  author={Ji, Chenxing and Kuipers, Fernando},
+  booktitle={IEEE International Conference on Network Softwarization (NetSoft)},
+  year={2023},
+  organization={IEEE}
+}
